Completed back cover text. Various corrections.
Change-Id: I342a2464c1d6759f18105f49e9cad178a7552733

--- a/Quantum Field Theory.tex
+++ b/Quantum Field Theory.tex
@@ -269,7 +269,7 @@ of Quantum Field Theory
 {\large Sébastien Fauvel\footnotemark[2]}
 \vskip 5mm
 {\large \today}
-\footnotetext[2]{Contact: Sébastien Fauvel, Ackerstrasse~43, CH-4057 Basle, Switzerland. E-mail: \htmladdnormallink{\texttt{sebastien.fauvel@gmx.ch}}{mailto:sebastien.fauvel@gmx.ch}.}
+\footnotetext[2]{Contact: Sébastien Fauvel, Ackerstrasse~43, CH-4057 Basel, Switzerland. E-mail: \htmladdnormallink{\texttt{sebastien.fauvel@gmx.ch}}{mailto:sebastien.fauvel@gmx.ch}.}
 }
 \end{center}
 \vfill
@@ -299,7 +299,7 @@ Document available online at \htmladdnormallink{quantum-ethics.org}{http://quant
 
 First and foremost, I would like to thank my wife Angela for having sacrificed so much of our precious free time as I was working on this book. This publication would never have been possible without her patience, her understanding, all her love and support. Thank you!
 
-I would also like to thank my colleague Markus Matteucci for initiating me into the art of book publishing, my fellow students Christian Hagendorf and Tristan Machado for our encouraging and fruitful discussions that did much to my understanding of Physics, my teachers Christian Swit and Stephane Gentil who introduced me to the joys of Philosophy and Mathematics, my uncle Bertrand Liaudet and my regretted ``godfather'' Frédéric Poupaud for having made me discover the world of Algorithmic and Informatics at a far too early age. They all did very much for my personal evolution.
+I would also like to thank my colleague Markus Matteucci for initiating me into the art of book publishing, my fellow students Christian Hagendorf and Tristan Machado for our encouraging and fruitful discussions that did much to my understanding of Physics, my teachers Christian Swit and Stéphane Gentil who introduced me to the joys of Philosophy and Mathematics, my uncle Bertrand Liaudet and my regretted ``godfather'' Frédéric Poupaud for having made me discover the world of Algorithmic and Informatics at a far too early age. They all did very much for my personal evolution.
 
 \cleardoublepage
 \section*{Preface}
@@ -489,7 +489,7 @@ Eigenstates of the momentum operator are thus associated with plane waves on $\I
 \wf \Psi \pt \sp {\sv x} & = & \sum_{\n} \Psi(\bX 1 \pt \n \sp) \deltaX{\sv x - \a \n} \\
 \deltaX{\sv x} & \eqdef & (1+2 \N)^{-3} \prod_i \frac{\sin{\pi \svc x i / \a}}{\sin{\pi \svc x i / (1+2 \N)\a}}
 \end{eqnarray*}
-We define thus an isomorphism between a finite set, indexed on $( \pt,\sp )$, of complementary subspaces of $\Hn 1$, and a finite dimentional subspace of $\mathrm C^\infty\left(\IR^3,\IC\right)$ containing functions of period $(1+2\N)\a$ along each coordinate. In that space, the (image of the) momentum operator acts according to:
+We define thus an isomorphism between a finite set, indexed on $( \pt,\sp )$, of complementary subspaces of $\Hn 1$, and a finite dimensional subspace of $\mathrm C^\infty\left(\IR^3,\IC\right)$ containing functions of period $(1+2\N)\a$ along each coordinate. In that space, the (image of the) momentum operator acts according to:
 \begin{equation*}
 \Pop \wf \Psi \pt \sp {\sv x} = \frac{\h}{\i 2 \pi} \sv \nabla \wf \Psi \pt \sp {\sv x}
 \end{equation*}
@@ -635,7 +635,7 @@ The state of the quantum field in the interaction picture is defined in such a w
 \ket{\Psi_\I} \eqdef \UopK 0 t \ket{\Psi}
 \end{equation*}
 
-The Hamiltonian operator in the interaction picture is defined is such a way that the state of the quantum field in the interaction picture obeys following Schrödinger-like equation, where the Hamiltonian is time-dependant:
+The Hamiltonian operator in the interaction picture is defined is such a way that the state of the quantum field in the interaction picture obeys following Schrödinger-like equation, where the Hamiltonian is time-dependent:
 \begin{eqnarray*}
 \ddt \ket{\Psi_\I} & = & -\i 2 \pi \frac 1 \h \Hop_\I \ket{\Psi_\I} \\
 \Hop_\I & \eqdef & \UopK 0 t \Hop' \UopK t 0
@@ -751,7 +751,7 @@ where the sinc function is defined as in \ref{sinc}.
 
 The explicit perturbative development of the transition amplitude between two plane wave states $\ket{\Psi_i} = \ket{\bFQ {N_i} \pt \q \sp}$ and $\ket{\Psi_f} = \ket{\bFQ {N_f} \pt \q \sp}$ is therefore given by:
 \begin{equation*}
-\Umn f i 0 t {t_0} = \exp{-\i 2 \pi \frac{t - t_0} \h E_f} \delta_{f i}
+\Umn f i 0 t {t_0} = \exp{-\i 2 \pi \frac{t - t_0} \h E_f} \delta_{f,i}
 \end{equation*}
 \begin{equation*}
 \Umn f i 1 t {t_0} = -\i 2 \pi \frac{t - t_0} \h \exp{-\i \pi \frac{t - t_0} \h ( E_f + E_i )} \sinc{\frac{t - t_0} \h ( E_f - E_i )} H'_{f,i}
@@ -796,7 +796,7 @@ Since the end of the second World War and the translation of the intellectual ce
 
 \section{Individual mind}
 
-Each of us has a direct experience of the reality of an individual mind, so I will only expose a few reflections in this place. I think that the state of an individual mind should be considered in its ``organic'' unity, that picking out single conscious thoughts and considering that the state of this mind is simply composed of these should be considered as an oversimplified and inadequate view. Within this ``organic'' unity, however, the intensity of consciousness may vary, focussing our awareness on some aspects rather than on others. The border between conscious and unconscious thoughts is therefore not really clear to ourselves, as there is a slow transition made up of more or less subconscious thoughts of decreasing intensity. When I refer to the state of an individual mind, I will mean in principle the unity of all conscious and subconscious thoughts, although we're not quite sure of where they end. They will, in general, contain among other things representations of a body, of its activity, of its environment, of past experiences... as well as representations of time, which make up our feeling of being continuously ourselves in the continuity of time. But I believe that this feeling of permanence of the individual mind is a mere illusion, for two reasons: First, this feeling is experienced in every single instant of consciousness; we could by no mean find out if we really have experienced other instants of consciousness ``before'' and if these instants of consciousness correspond to our current memories or not, so this feeling of permanence \textit{could} be an illusion. In fact, if I would suddenly experience another individual mind (with its own memories and not mine), I wouldn't even notice it! Second, the experience of an individual mind seems to cease as ``our'' body is dreamless sleeping, swoon or eventually die, so I think its permanence is discarded by common experience. Therefore, I don't believe that an individual mind is a fundamental entity of the mental world, which would have an existence of its own and evolve in time, and I will only refer to instantaneous \textit{states} of an individual mind, which are not related to each other across time in the form of a personal history at a fundamental level.
+Each of us has a direct experience of the reality of an individual mind, so I will only expose a few reflections in this place. I think that the state of an individual mind should be considered in its ``organic'' unity, that picking out single conscious thoughts and considering that the state of this mind is simply composed of these should be considered as an oversimplified and inadequate view. Within this ``organic'' unity, however, the intensity of consciousness may vary, focusing our awareness on some aspects rather than on others. The border between conscious and unconscious thoughts is therefore not really clear to ourselves, as there is a slow transition made up of more or less subconscious thoughts of decreasing intensity. When I refer to the state of an individual mind, I will mean in principle the unity of all conscious and subconscious thoughts, although we're not quite sure of where they end. They will, in general, contain among other things representations of a body, of its activity, of its environment, of past experiences... as well as representations of time, which make up our feeling of being continuously ourselves in the continuity of time. But I believe that this feeling of permanence of the individual mind is a mere illusion, for two reasons: First, this feeling is experienced in every single instant of consciousness; we could by no mean find out if we really have experienced other instants of consciousness ``before'' and if these instants of consciousness correspond to our current memories or not, so this feeling of permanence \textit{could} be an illusion. In fact, if I would suddenly experience another individual mind (with its own memories and not mine), I wouldn't even notice it! Second, the experience of an individual mind seems to cease as ``our'' body is dreamless sleeping, swoon or eventually die, so I think its permanence is discarded by common experience. Therefore, I don't believe that an individual mind is a fundamental entity of the mental world, which would have an existence of its own and evolve in time, and I will only refer to instantaneous \textit{states} of an individual mind, which are not related to each other across time in the form of a personal history at a fundamental level.
 
 \section{Collective mind}
 
@@ -978,7 +978,7 @@ In particular, if $\left| H'_{f + (\delta \q_j),i} \right|^2$ admits such a cont
 
 \section{Spinoza's philosophy}
 
-Since the interpretation of Quantum Field Theory I am about to give has been inspiered by Spinoza's classical work \textit{The Ethics}~\cite{Spinoza1677}, I shall make here a short presentation of its basic ideas. According to the causalist world view of classical mechanics, each individual existent thing -- an object, a thought -- has necessarily a cause which explains its existence at a given moment. These things are considered to be alterations, or ``modes'', of some fundamental ``substance'' constitutive of Nature as a whole. Since this substance has some of the fundamental properties attributed to God by Judaic theology -- self-caused, free, eternal, infinite (i.e. containing everything) --, it has been identified by Spinoza to God itself, confounding thus the concept of `God' with what philosophers traditionally call `Nature'. The human intellect conceives the substance, as well as every individual existent thing, under the two aspects, or ``attributes'', of an extended (physical) and of a thinking (mental) thing. This categorization, however, is nothing but a property of the human intellect and not an intrinsic property of the things themselves. Considered under its physical aspect, a human being, for instance, consists in a body extending in the substance, i.e. in God, whereas it consists in a mind thinking in God when considered under its mental aspect. Nevertheless, both are one and the same thing, so that the laws of Physics -- considered to be part of the nature of God -- could determine the laws of Psychology. The knowledge of God, which also encompasses the knowledge of the world in general and of Man in particular, is therefore considered to be the mind's highest good.
+Since the interpretation of Quantum Field Theory I am about to give has been inspired by Spinoza's classical work \textit{The Ethics}~\cite{Spinoza1677}, I shall make here a short presentation of its basic ideas. According to the causalist world view of classical mechanics, each individual existent thing -- an object, a thought -- has necessarily a cause which explains its existence at a given moment. These things are considered to be alterations, or ``modes'', of some fundamental ``substance'' constitutive of Nature as a whole. Since this substance has some of the fundamental properties attributed to God by Judaic theology -- self-caused, free, eternal, infinite (i.e. containing everything) --, it has been identified by Spinoza to God itself, confounding thus the concept of `God' with what philosophers traditionally call `Nature'. The human intellect conceives the substance, as well as every individual existent thing, under the two aspects, or ``attributes'', of an extended (physical) and of a thinking (mental) thing. This categorization, however, is nothing but a property of the human intellect and not an intrinsic property of the things themselves. Considered under its physical aspect, a human being, for instance, consists in a body extending in the substance, i.e. in God, whereas it consists in a mind thinking in God when considered under its mental aspect. Nevertheless, both are one and the same thing, so that the laws of Physics -- considered to be part of the nature of God -- could determine the laws of Psychology. The knowledge of God, which also encompasses the knowledge of the world in general and of Man in particular, is therefore considered to be the mind's highest good.
 
 \section{Quantum metaphysics}
 
@@ -1027,9 +1027,13 @@ Materialism is the doctrine according to which the subjective experience of cons
 \end{eqnarray*}
 and the stochastic process of collective mind selection do not apply.
 
-Materialism in this context is facing the problem that it cannot satisfactorily explain how it is supposed to ``feel like'' in physical states where brains happen to be in a quantum superposition of physical states corresponding to different states of consciousness. There are two well-known ways of trying to escape this issue. In the no collapse theory of Everett, each consciousness state in the quantum superposition of a brain is supposed to be equally real as the others and to be experienced on its own. More precisely, these consciousness states are supposed to be statistically ``weighted'' in some (mysterious) way by the square norm of the corresponding component of the physical state of the universe, so that we are supposed to be more likely to experience them if they correspond to a component with a greater square norm.
+Materialism in this context is facing the problem that it cannot satisfactorily explain how it is supposed to ``feel like'' in physical states where brains happen to be in a quantum superposition of physical states corresponding to different states of consciousness. This would be the case for instance in a state of the form:
+\begin{equation*}
+\left(\sqrt{0.9}\ \dop{\Psi_\ims^\alpha} + \sqrt{0.1}\ \dop{\Psi_{\ims'}^{\alpha'}}\right) \H_{\cms_\vac}
+\end{equation*}
+where the brain states corresponding to the mental states $\bM 1 \ims$ and $\bM 1 {\ims'}$ are both present in a quantum superposition with the statistical weights 90\% and 10\%, respectively. There are two well-known ways of trying to escape this issue. In the no collapse theory of Everett, each consciousness state in the quantum superposition of a brain is supposed to be equally real as the others and to be experienced on its own. More precisely, these consciousness states are supposed to be statistically ``weighted'' in some (mysterious) way (since there isn't any random process taking place) by the square norm of the corresponding component of the physical state of the universe, so that we are supposed to be more likely to experience one of them if it corresponds to a component with a greater square norm.
 
-The second way of escaping the difficulties of materialism is to deny that there are ``noticeable'' quantum superpositions of consciousness states of the brain. This is basically the aim of all spontaneous collapse theories, which have been reviewed exhaustively by Angelo Bassi and GianCarlo Ghirardi in their report \textit{Dynamical Reduction Models}~\cite{Bassi2003}. Generally, the physical state of the universe is supposed to collapse in such a way that the center of mass of macroscopic objects is practically always localized in a small region of space, so that we cannot notice its quantum fluctuations with our naked senses. As a consequence, insofar as our consciousness state is being mostly driven by sensory experience only, the states of consciousness corresponding to the components of a quantum superposition of brains are most likely to differ very little from another, so that it shouldn't really mind if we don't know which one is being experienced.
+The second way of escaping the difficulties of materialism is to deny that there are ``noticeable'' quantum superpositions of consciousness states of the brain. This is basically the aim of all spontaneous collapse theories, which have been reviewed exhaustively by Angelo Bassi and GianCarlo Ghirardi in their report \textit{Dynamical Reduction Models}~\cite{Bassi2003}. Generally, the physical state of the universe is supposed to collapse in such a way that the center of mass of macroscopic objects is practically always localized in a small region of space, so that we cannot notice its quantum fluctuations with our naked senses. As a consequence, insofar as our consciousness state is being mostly driven by sensory experience only, the states of consciousness corresponding to the components of a quantum superposition of brains are most likely to differ very little from another, so that it shouldn't really mind if we don't know exactly which one is being experienced.
 
 \section{Solipsism}
 
@@ -1124,7 +1128,7 @@ Its development on the plane waves basis is given by:
 
 \section{Dressed states}
 
-As a consequence of the electromagnetic interaction between the photon and the charged fermion fields, an excitation of a single particle field like $\ketQ N \pt \q \sp$ is unstable and is also a poor model for observed particles. In fact, these particles are always being observed ``dressed'', i.e. forming a particle complex together with excitations of the other fields. As a consequence, the ``bare'' rest mass, electric charge and magnatic moment of these particles, as they appear in the QED model, do not correspond to the values observed by dressed particles. These renormalized values as well as the composition of dressed particles can be calculated in the frame of QED as a function of the bare values, which can also be indirectly determined experimentally.
+As a consequence of the electromagnetic interaction between the photon and the charged fermion fields, an excitation of a single particle field like $\ketQ N \pt \q \sp$ is unstable and is also a poor model for observed particles. In fact, these particles are always being observed ``dressed'', i.e. forming a particle complex together with excitations of the other fields. As a consequence, the ``bare'' rest mass, electric charge and magnetic moment of these particles, as they appear in the QED model, do not correspond to the values observed by dressed particles. These renormalized values as well as the composition of dressed particles can be calculated in the frame of QED as a function of the bare values, which can also be indirectly determined experimentally.
 
 We consider a bare state of the form $\ket{{\bFQ N \pt \q \sp}_0}$ and will derive the corresponding dressed state $\ket{\Psi}$ as eigenstate of $\Hop_0 + \Hop'$ for an eigenvalue $E$ to be determined. Assuming the bare and dressed states aren't orthogonal to each other, we write the latter as:
 \begin{equation*}
@@ -1210,7 +1214,7 @@ This energy is represented by following Feynman diagram:
 \includegraphics[scale=0.2]{images/diagrams/Vacuum_Energy_2.pdf}
 \end{center}
 where the Coulomb interaction term is conventionally  represented by the case $\sp_\photon = 0$.
-Assumung $\kappa^\vac_\pt \approx 0.25$ for electrically charged fermions, the energy of the electromagnetically dressed vacuum evaluates up to the second order to:
+Assuming $\kappa^\vac_\pt \approx 0.25$ for electrically charged fermions, the energy of the electromagnetically dressed vacuum evaluates up to the second order to:
 \begin{equation*}
 E^{(2)} \approx 0.25 ( 1 + 2 \N )^3 \frac {14} 3 \frac{\e^2}{4 \pi \vpty \a}
 \end{equation*}
@@ -1343,7 +1347,7 @@ The mean position $\n_t$ of the particle follows therefore, in the toroidal spac
 
 \section{Leading order calculation}
 
-We consider in this section the scattering of an electron by an atomic nucleus of atomic number $Z$. We model the nucleus by a classical point charge without magnetic moment, being at rest at the origin in the lattice reference frame and having a mass much higher as the mass of the electron. The corresponding electromagnetic field is described as a classical Coulomb potential $\V^{cl}$ given in terms of Fourier components by:
+We consider in this section the scattering of an electron by an atomic nucleus of atomic number $Z$. We model the nucleus by a classical point charge without magnetic moment, being at rest at the origin in the lattice reference frame and having a mass much higher than the mass of the electron. The corresponding electromagnetic field is described as a classical Coulomb potential $\V^{cl}$ given in terms of Fourier components by:
 \begin{eqnarray*}
 \V^{cl}_{\n} & \eqdef & ( 1 + 2 \N )^{-3} \sum_{\q_\photon \neq \sv 0} \FT \V^{cl}_{\q_\photon} \exp{\i 2 \pi \n \ssp \q_\photon} \\
 \FT \V^{cl}_{\q_\photon} & \eqdef & \frac{Z \e}{4 \pi^2 \vpty \a q_\photon^2}
@@ -1504,7 +1508,7 @@ $$
 $$
 These matrices verify the anticommutation relations:
 \begin{equation*}
-\left\{ \sigmat a, \sigmat b \right\} \eqdef \sigmat a \sigmat b + \sigmat b \sigmat a = 2 \delta_{a, b} I_2
+\left\{ \sigmat a, \sigmat b \right\} \eqdef \sigmat a \sigmat b + \sigmat b \sigmat a = 2 \delta_{a,b} I_2
 \end{equation*}
 
 \section{Dirac matrices}
@@ -1724,4 +1728,8 @@ We extend these definitions periodically to all $\q \in \ILD$ by $\SAop \pt \q \
 
 % Back cover
 
-% Sébastien Fauvel, born 1983, graduated from the Ecole Normale Supérieure of Paris in Physics and Comparative literature. He has been working as a Consultant, Software and Web Developer in Lyon, Freiburg and Basle.
+%Sébastien Fauvel, born 1983, graduated from the Ecole Normale Supérieure of Paris in Physics and Comparative literature. He has been working as a Consultant, Software and Web Developer in Lyon, Freiburg and Basel.
+
+%This groundbreaking work is bringing together Quantum Physicists and Philosophers in an unprecedented way... Making a tabula rasa from all its historical and heuristical developments, it presents Quantum Field Theory in its modern form in a exquisitely simple mathematical apparatus, nonetheless completely well-defined and fully functional... Focusing on the underlying ontology of Quantum Field Theory, which reveals very similar to the classical metaphysics of Spinoza's Ethics, it provides a solid fundament for any philosophical discussion of its interpretation.
+
+%This book ought to become compulsory reading not only for all Philosophers interested by the metaphysical and ethical implications of Quantum Physics, but also for all Physicists working on the foundations of Physics, on Quantum Measurement and Decoherence Theory.
