Added corrections to the back cover text. Updated webpage.
Change-Id: Id121a4374bd5b2a38783392b7925cc33c1af0149

--- a/Quantum Field Theory.tex
+++ b/Quantum Field Theory.tex
@@ -1735,4 +1735,4 @@ We extend these definitions periodically to all $\q \in \ILD$ by $\SAop \pt \q \
 
 %This groundbreaking work is bringing together Quantum Physicists and Philosophers in an unprecedented way... Making a tabula rasa from all its historical and heuristical developments, it presents Quantum Field Theory in its modern form in a exquisitely simple mathematical apparatus, nonetheless completely well-defined and fully functional... Focusing on the underlying ontology of Quantum Field Theory, which turns out to be very similar to the classical metaphysics of Spinoza's Ethics, it provides a solid fundament for any philosophical discussion of its interpretation.
 
-%This book ought to become compulsory reading not only for all Philosophers interested by the metaphysical and ethical implications of Quantum Physics, but also for all Physicists working on the foundations of Physics, on Quantum Measurement and Decoherence Theory.
+%This book ought to become compulsory reading not only for all Philosophers interested by the metaphysical and ethical implications of Quantum Physics, but also for all Physicists working on the foundations of Physics, on Quantum Measurement and on Decoherence Theory.
